<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@color/backgroundcolor"
    tools:context=".UserInfo">


    <TextView
        android:id="@+id/textView"
        android:paddingTop="130dp"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginBottom="120dp"
        android:gravity="center"
        android:text="@string/tic_tac_toe"
        android:textColor="@color/white"
        android:fontFamily="@font/lacquer"
        android:textSize="44sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:background="@color/backgroundColorLayout"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="30dp"
            android:layout_marginTop="7dp"
            android:text="@string/x"
            android:gravity="center"
            android:textSize="30sp"
            android:textColor="@color/Red"
            android:fontFamily="casual"
            android:layout_marginStart="10dp"
            android:adjustViewBounds="true"
            />
        <EditText
            android:layout_width="match_parent"
            android:id="@+id/firstPlayer"
            android:autofillHints="First Player Name:"
            android:inputType="text"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:hint="@string/first_player_name"
            android:textColorHint="@color/lowwhite"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@color/backgroundColorLayout"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="40dp"
            android:layout_marginTop="7dp"
            android:layout_marginStart="6dp"
            android:text="@string/o"
            android:gravity="center"
            android:textSize="30sp"
            android:textColor="@color/Yellow"
            android:fontFamily="casual"
            android:adjustViewBounds="true"
            />
        <EditText
            android:layout_width="match_parent"
            android:id="@+id/secondPlayer"
            android:inputType="text"
            android:autofillHints="Second Player Name:"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:hint="@string/second_player_name"
            android:textColorHint="@color/lowwhite"/>
    </LinearLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/startGame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:textColor="@color/black"
        android:text="@string/start_game"
        android:background="@drawable/startbuttoncolor"
        />
</LinearLayout>